--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@ title: the Weight
       {% include header.html %}
       {% include nav.html %}
       <main>
-	{% include front.html %}
+	<h3>I used to play music in bands, but then I grew up. Now I'm going to school to be a pediatric euthanizer.</h3>
+	<p>This is the main body. And <em>this</em> is going to be the <em>emphasized</em>, whatever that means. <i>This</i>, however,
+	  is in <i>italic</i>, while <b>this</b> is in <b>bold</b>. <strong>This</strong> is going to be <strong>strong</strong>,
+	  as the tag says, but again, I've no idea what that means. That should cover it for font styling.</p><p>I guess I should
+	  work on the style for the anchors, but that can wait.</p><p>ff fi ffi ffj</p><p>ct st ae</p><p>0123456789</p>
       </main>
     </body>
   </html>
