--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: the Weight
     <head>
       <title>the Weight</title>
       <link rel="stylesheet" type="text/css" href="{{ '/css/gavin.css' | relative_url }}" />
+      <meta name="viewport"  content="width=device=width, initial-scale=1.0" />
     </head>
     <body class="container">
       {% include header.html %}
