starting to liquidify the page

--- a/index.html
+++ b/index.html
@@ -1,22 +1,9 @@
 ---
+layout: default
 title: the Weight
 ---
-<!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <title>the Weight</title>
-      <link rel="stylesheet" type="text/css" href="{{ '/css/gavin.css' | relative_url }}" />
-      <meta name="viewport"  content="width=device=width, initial-scale=1.0" />
-    </head>
-    <body class="container">
-      {% include header.html %}
-      {% include nav.html %}
-      <main>
 	<h3>I used to play music in bands, but then I grew up. Now I'm going to school to be a pediatric euthanizer.</h3>
 	<p>This is the main body. And <em>this</em> is going to be the <em>emphasized</em>, whatever that means. <i>This</i>, however,
 	  is in <i>italic</i>, while <b>this</b> is in <b>bold</b>. <strong>This</strong> is going to be <strong>strong</strong>,
 	  as the tag says, but again, I've no idea what that means. That should cover it for font styling.</p><p>I guess I should
 	  work on the style for the anchors, but that can wait.</p><p>ff fi ffi ffj</p><p>ct st ae</p><p>0123456789</p>
-      </main>
-    </body>
-  </html>
