--- a/colophon.html
+++ b/colophon.html
@@ -2,14 +2,16 @@
 layout: default
 ---
 <p>This site was designed and handwritten by Lucas Smith using Emacs and the Mozilla Firefox suite of developer tools,
-  including MDN (an invaluable resource). All content, with the exception of this colophon, which was written by the
-  designer, is written by and copyrighted to Gavin Tiemeyer.</p>
-<p>The typefaces are part of Cormorant, a free type family made by Christian Thalmann, as found on Catharsis Fonts. As
-  a typographic reference, Robert Bringhurst's 'The Elements of Typographic Style' was used, though all faults and
-  discrepancies are the designer's alone.</p>
-<p>There is no database, as the site is run with Jekyll on Github Pages.</p>
-<p>Both skeleton.css and vhs.css were used, albeit only very little. I've included both in the css directory for those
-  interested.</p>
-<p>Quoting from The Web Standards Project, "Note that there is only one version of the site; there are no fancy backend
-  tricks that deliver one site to one browser, and another site to another browser. What you get is what everyone gets.
-  It's up to your browser to decide what to do with it, which is the way that the Web is supposed to work."</p>
+  including <a href="https://developer.mozilla.org/en-US/">MDN</a> (an invaluable resource). All content, with the
+  exception of this colophon, which was written by the designer, is written by and copyrighted to Gavin Tiemeyer.</p>
+<p>The typefaces are part of Cormorant, a free type family made by Christian Thalmann, as found on
+  <a href="https://github.com/CatharsisFonts/">Catharsis Fonts</a>. As a typographic reference, Robert Bringhurst's
+  <em>The Elements of Typographic Style</em> was used, though all faults and discrepancies are the designer's alone.</p>
+<p>There is no database, as the site is run with <a href="https://jekyllrb.com/">Jekyll</a> on
+  <a href="https://pages.github.com/">Github Pages</a>.</p>
+<p>Both <a href="http://getskeleton.com/">skeleton.css</a> and <a href="http://jxnblk.com/vhs/">vhs.css</a> were used,
+  albeit only very little. I've included both in the css directory for those interested.</p>
+<p>Quoting from <a href="https://www.webstandards.org/about/colophon/index.html">The Web Standards Project</a>, "Note
+  that there is only one version of the site; there are no fancy backend tricks that deliver one site to one browser,
+  and another site to another browser. What you get is what everyone gets. It's up to your browser to decide what to
+  do with it, which is the way that the Web is supposed to work."</p>
