some minor css mods and a colophon title

--- a/colophon.html
+++ b/colophon.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<h3>Colophon</h3>
 <p>This site was designed and handwritten by Lucas Smith using Emacs and the Mozilla Firefox suite of developer tools,
   including <a href="https://developer.mozilla.org/en-US/">MDN</a> (an invaluable resource). All content, with the
   exception of this colophon, which was written by the designer, is written by and copyrighted to Gavin Tiemeyer.</p>
