blockquote add in colophon

--- a/colophon.html
+++ b/colophon.html
@@ -12,7 +12,7 @@ layout: default
   <a href="https://pages.github.com/">Github Pages</a>.</p>
 <p>Both <a href="http://getskeleton.com/">skeleton.css</a> and <a href="http://jxnblk.com/vhs/">vhs.css</a> were used,
   albeit only very little. I've included both in the css directory for those interested.</p>
-<p>Quoting from <a href="https://www.webstandards.org/about/colophon/index.html">The Web Standards Project</a>, "Note
-  that there is only one version of the site; there are no fancy backend tricks that deliver one site to one browser,
-  and another site to another browser. What you get is what everyone gets. It's up to your browser to decide what to
-  do with it, which is the way that the Web is supposed to work."</p>
+<p>Quoting from <a href="https://www.webstandards.org/about/colophon/index.html">The Web Standards Project</a>,
+  <blockquote>Note that there is only one version of the site; there are no fancy backend tricks that deliver one site
+    to one browser, and another site to another browser. What you get is what everyone gets. It's up to your browser to
+    decide what to do with it, which is the way that the Web is supposed to work.</blockquote></p>
