--- a/blog.html
+++ b/blog.html
@@ -9,8 +9,8 @@ layout: default
     <div class="date">
       {{ post.date | date: '%B %d, %Y' }}
     </div>
-    <p>
+    <div class="excerpt">
       {{ post.excerpt }}
-    </p>
+    </div>
   </section>
 {% endfor %}
